apps/wordpress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      serviceAccountName: wordpress
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: wordpress
                topologyKey: kubernetes.io/hostname
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: s3-pvc
      containers:
        - name: wordpress
          image: wordpress:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: persistent-storage
              mountPath: /var/www/html/wp-content/uploads
