apps/wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress
spec:
  selector:
    app: wordpress
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
